k8s/infra/controllers/victoria-metrics/ns.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: vm-system
  labels:
    pod.security.kubernetes.io/enforce: privileged
