k8s/infra/controllers/victoria-metrics/route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  namespace: vm-system
spec:
  parentRefs:
  - name: external
    namespace: gateway
  hostnames:
  - vizmon.schaermu.ch
  rules:
  - backendRefs:
    - name: vmks-grafana
      port: 80
    matches:
    - path:
        type: PathPrefix
        value: /
